--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,10 +21,11 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    buildToolsVersion '28.0.3'
 
     defaultConfig {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        minSdkVersion = 14
     }
     lintOptions {
         disable 'InvalidPackage'
