--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -1,16 +1,22 @@
 buildscript {
+    ext.kotlin_version = '1.2.71'
     repositories {
+        google()
         jcenter()
+
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
 
 allprojects {
     repositories {
+        google()
         jcenter()
+
     }
 }
 
