--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,8 @@ description: A flutter plugin to use the speech recognition on iOS and Android
 version: 0.2.0+1
 author: Erick Ghaumez <erick@rxla.bz>
 homepage: https://github.com/rxlabz/speech_recognition
-
+environment:
+  sdk: '>=2.0.0'
 flutter:
   plugin:
     androidPackage: bz.rxla.flutter.speechrecognition
