--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ build/
 ios/.generated/
 packages
 pubspec.lock
+.dart_tool/package_config.json
+example/.flutter-plugins-dependencies
+example/.dart_tool/package_config.json
+example/ios/Flutter/flutter_export_environment.sh
